# LowLatencyBuffer

./: CMakeLists.txt  main.cpp
include/llb/: order.hpp  slab_allocator.hpp  spsc_buffer.hpp
src/: slab_allocator.cpp
